@@ -1,3 +1,9 @@
+2007-09-11  Dan Williams  <dcbw@redhat.com>
+
+	* src/applet.c
+		- (nma_menu_item_activate): Fix up device activation for changes
+			in argument types for Activate
+
 2007-09-09  Dan Williams  <dcbw@redhat.com>
 
 	* src/applet.c
